--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div id="post">
-        <h1>Aqui haremos un blogpost</h1>
-        <p>y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui haremos un blogpost</h1>
+            <p>y este es el parrafo de inicio</p>
+        </div>
     </div>
 </body>
 </html>
