Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <div id="cabecera">
+        Cabecera si senor xd
+    </div>
     <div id="container">
         <div id="post">
             <h1>Aqui haremos un blogpost</h1>
