Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div id="cabecera">
-        Cabecera si senor xd
-    </div>
     <div id="container">
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog for the lulz</span>
+        </div>
         <div id="post">
             <h1>Aqui haremos un blogpost</h1>
             <p>y este es el parrafo de inicio</p>
