Agregado el contenido adicional al blog y mejor typografia lolxd

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,14 @@
         <div id="post">
             <h1>Aqui haremos un blogpost</h1>
             <p>y este es el parrafo de inicio</p>
+            <p>Y este es otro parrafo para decir
+                que el blog es la onda y voten por mi
+            </p>
+            <p>Bueno prefiero hacer vods aunque escribir
+                es la onda, no lo voy a negar, muchas veces
+                no hay manera para expresar lo que uno siente
+                xd
+            </p>
         </div>
     </div>
 </body>
