Modifique cabecera y color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,9 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog for the lulz</span>
+            <span id="tagline">Tu blog for the lulz
+                de cabecera
+            </span>
         </div>
         <div id="post">
             <h1>Aqui haremos un blogpost</h1>
