Agregue sub, cambie la cabecera y puse todo azul porque quise

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,9 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog for the lulz</span>
+            <span id="tagline">Tu blog for the lulz
+                de master
+            </span>
         </div>
         <div id="post">
             <h1>Aqui haremos un blogpost</h1>
@@ -24,6 +26,7 @@
                 no hay manera para expresar lo que uno siente
                 xd
             </p>
+            <p>Pero suscribete plox</p>
         </div>
     </div>
 </body>
