--- a/blogpost.html
+++ b/blogpost.html
@@ -28,6 +28,9 @@
             </p>
             <p>Pero suscribete plox</p>
         </div>
+        <div id="footer">
+            Aquí echandole ganas segun xd
+        </div>
     </div>
 </body>
 </html>
